# coast_line_removal

./: CMakeLists.txt  package.xml
include/coast_line_removal/: coast_line_removal.h
src/: coast_line_removal.cpp
