<?xml version="1.0"?>
<package format="2">
  <name>coast_line_removal</name>
  <version>0.0.0</version>
  <description>The coast_line_removal package</description>

  <maintainer email="ms.kataoka@gmail.com">masaya kataoka</maintainer>

  <license>Apache v2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml"/>
  </export>
</package>
